<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameTag"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nameTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameOutput"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTag" />

    <TextView
        android:id="@+id/usernameTag"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/usernamePrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOutput" />

    <TextView
        android:id="@+id/usernameOutput"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTag" />

    <Button
        android:id="@+id/viewBooks"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/viewBooksButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameOutput" />

    <Button
        android:id="@+id/currentLoans"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/viewOngoingLoansButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBooks" />

    <Button
        android:id="@+id/loanHistory"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/viewLoanHistoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentLoans" />

</androidx.constraintlayout.widget.ConstraintLayout>